--- a/EpiModel.ipynb
+++ b/EpiModel.ipynb
@@ -309,7 +309,7 @@
     "One of the problems that worry heath scientists is that sick people do not become immune but rather go directly back into the susceptible population. The model for this case is\n",
     "\\begin{eqnarray}\n",
     "&& {\\frac {d S}{d t}} = - \\beta E S - \\gamma I S + \\mu I \\\\\n",
-    "&& {\\frac {d E}{d t}} = \\beta E S  - \\alpha E \\\\\n",
+    "&& {\\frac {d E}{d t}} = \\beta E S  + \\gamma I S - \\alpha E \\\\\n",
     "&& {\\frac {d I}{d t}} = \\alpha E - \\mu I \n",
     "\\end{eqnarray}\n",
     "\n"
