--- a/SD.ipynb
+++ b/SD.ipynb
@@ -129,6 +129,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([ 0.0301, -0.0185, -0.1280, -0.1854,  0.0121,  0.0723,  0.2327, -0.1097,\n",
+      "         0.0634, -0.0798], requires_grad=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(theta)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
