--- a/fluxBalace.ipynb
+++ b/fluxBalace.ipynb
@@ -385,17 +385,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Homework (Due Thurs)\n",
     "\n",
     "1. Write a code that differentiate the function $\\rho$ twice in the y direction and test it\n",
     "\n",
-    "2. Combine the code above that computes the x derivative and y derivatives to compute the Laplacian of $\\rho$, $\\nabla^2 \\rho$ "
+    "2. Combine the code above that computes the x derivative and y derivatives to compute the Laplacian of $\\rho$, $\\nabla^2 \\rho$\n",
+    "and test the code"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
