--- a/EpiModel.ipynb
+++ b/EpiModel.ipynb
@@ -327,10 +327,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# First define the right hand side, we store all the parameters\n",
+    "# in a single vector theta = [alpha, beta,gamma,mu]\n",
+    "def SEISmodelS(theta,S,E,I):\n",
+    "    alpha = theta[0]\n",
+    "    beta  = theta[1]\n",
+    "    gamma = theta[2]\n",
+    "    mu    = theta[3]\n",
+    "    \n",
+    "    dSdt  = -beta*E*S - gamma*I*S + mu*I         # dS/dt\n",
+    "    dEdt  = beta*E*S  + gamma*I*S - alpha*E      # dE/dt\n",
+    "    dIdt  = alpha*E - mu*I                       # dI/dt\n",
+    "    \n",
+    "    return dSdt, dEdt, dIdt\n",
+    "\n",
+    "def integrateSEIS(theta,S0,E0,I0,dt,nt):\n",
+    "    \n",
+    "    # vectors to save the results over time\n",
+    "    Sout = torch.zeros(nt+1); Sout[0] = S0\n",
+    "    Eout = torch.zeros(nt+1); Eout[0] = E0\n",
+    "    Iout = torch.zeros(nt+1); Iout[0] = I0\n",
+    "    \n",
+    "    S = S0; E = E0; I = I0\n",
+    "    for i in range(nt):\n",
+    "        dSdt, dEdt, dIdt = SEISmodel(theta,S,E,I)\n",
+    "        S += dt*dSdt\n",
+    "        E += dt*dEdt\n",
+    "        I += dt*dIdt\n",
+    "        \n",
+    "        Sout[i+1] = S; Eout[i+1] = E; Iout[i+1] = I;\n",
+    "        \n",
+    "    return Sout, Eout, Iout    "
+   ]
   },
   {
    "cell_type": "code",
